# CamHarvester

./: CMakeLists.txt  README.md  cameras.url
src/: BaseCustomerNetworking.cpp  BaseCustomerNetworking.h  CamCallable.h  CamClient.cpp  CamClient.h  CamClientManager.cpp  CamClientManager.h  CamConfig.cpp  CamConfig.h  CamFunctions.cpp  CamFunctions.h  CamHTTP.cpp  CamHTTP.h  CamHTTPConstants.cpp  CamHTTPConstants.h  CamHarvester.cxx  CamManager.cpp  CamManager.h  Camera.cpp  Camera.h
